--- a/p1.css
+++ b/p1.css
@@ -188,3 +188,40 @@ line-height: 1;
   transform: scale(1.2);
   box-shadow: 0 0 25px var(--main-color);
 }
+.about{
+  display: flex;
+  align-items: center;
+  gap: 10rem;
+  background: var(--second-bg-color);
+}
+.about-image img{
+  width: 35vw;
+  border-radius: 50%;
+  box-shadow: 0 0 25px var(--main-color);
+  transition:0.3s ease-in-out;
+} 
+.about-image img:hover
+{
+  box-shadow: 0 0 25px var(--main-color),
+              0 0 50px var(--main-color),
+              0 0 100px var(--main-color)
+}
+.about-content h2{
+  font-size: 7rem;
+  text-align: left;
+}
+.about-content p{
+  font-size: 1.6rem;
+}
+.about-content .btn{
+  margin-top: 3rem;
+}
+::webkit-scrollbar{
+  width: 20px;
+}
+.webkit-scrollbar-track{
+  background: var(--second-bg-color);
+}
+.webkit-scrollbar-track{
+  background: var(--main-color);
+}
